codes/2023/18-Excellence-HUST (C++)/SYSYParser/SysyParser.cpp

// Generated from Sysy.g4 by ANTLR 4.13.0


#include "SysyListener.h"
#include "SysyVisitor.h"

#include "SysyParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace
{

struct SysyParserStaticData final {
    SysyParserStaticData(
        std::vector<std::string> ruleNames,
        std::vector<std::string> literalNames,
        std::vector<std::string> symbolicNames
    )
        : ruleNames(std::move(ruleNames))
        , literalNames(std::move(literalNames))
        , symbolicNames(std::move(symbolicNames))
        , vocabulary(this->literalNames, this->symbolicNames)
    {
    }

    SysyParserStaticData(const SysyParserStaticData&) = delete;

    SysyParserStaticData(SysyParserStaticData&&) = delete;

    SysyParserStaticData& operator=(const SysyParserStaticData&) = delete;

    SysyParserStaticData& operator=(SysyParserStaticData&&) = delete;

    std::vector<antlr4::dfa::DFA>       decisionToDFA;
    antlr4::atn::PredictionContextCache sharedContextCache;
    const std::vector<std::string>      ruleNames;
    const std::vector<std::string>      literalNames;
    const std::vector<std::string>      symbolicNames;
    const antlr4::dfa::Vocabulary       vocabulary;
    antlr4::atn::SerializedATNView      serializedATN;
    std::unique_ptr<antlr4::atn::ATN>   atn;
};

::antlr4::internal::OnceFlag sysyParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
    SysyParserStaticData* sysyParserStaticData = nullptr;

void sysyParserInitialize()
{
#if ANTLR4_USE_THREAD_LOCAL_CACHE
    if (sysyParserStaticData != nullptr) { return; }
#else
    assert(sysyParserStaticData == nullptr);
#endif
    auto staticData = std::make_unique<SysyParserStaticData>(
        std::vector<std::string>{
            "compUnit",    "compUnitItem", "decl",        "constDecl",  "bType",    "constDef",
            "varDecl",     "varDef",       "initVal",     "funcDef",    "funcType", "funcFParams",
            "funcFParam",  "block",        "blockItem",   "stmt",       "exp",      "cond",
            "lVal",        "primaryExp",   "intConst",    "floatConst", "number",   "unaryExp",
            "stringConst", "funcRParam",   "funcRParams", "mulExp",     "addExp",   "relExp",
            "eqExp",       "lAndExp",      "lOrExp"},
        std::vector<std::string>{
            "",         "",       "",        "",     "",       "",        "",        "'int'",
            "'float'",  "'void'", "'const'", "'if'", "'else'", "'while'", "'break'", "'continue'",
            "'return'", "'='",    "'+'",     "'-'",  "'*'",    "'/'",     "'%'",     "'=='",
            "'!='",     "'<'",    "'>'",     "'<='", "'>='",   "'!'",     "'&&'",    "'||'",
            "','",      "';'",    "'('",     "')'",  "'['",    "']'",     "'{'",     "'}'"},
        std::vector<std::string>{
            "",
            "DecIntConst",
            "OctIntConst",
            "HexIntConst",
            "DecFloatConst",
            "HexFloatConst",
            "StringConst",
            "Int",
            "Float",
            "Void",
            "Const",
            "If",
            "Else",
            "While",
            "Break",
            "Continue",
            "Return",
            "Assign",
            "Add",
            "Sub",
            "Mul",
            "Div",
            "Mod",
            "Eq",
            "Neq",
            "Lt",
            "Gt",
            "Leq",
            "Geq",
            "Not",
            "And",
            "Or",
            "Comma",
            "Semicolon",
            "Lparen",
            "Rparen",
            "Lbracket",
            "Rbracket",
            "Lbrace",
            "Rbrace",
            "Ident",
            "Whitespace",
            "LineComment",
            "BlockComment"}
    );
    staticData->serializedATN = antlr4::atn::SerializedATNView(
        serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0])
    );

    antlr4::atn::ATNDeserializer deserializer;
    staticData->atn = deserializer.deserialize(staticData->serializedATN);

    const size_t count = staticData->atn->getNumberOfDecisions();
    staticData->decisionToDFA.reserve(count);
    for (size_t i = 0; i < count; i++) {
        staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
    }
    sysyParserStaticData = staticData.release();
}

}   // namespace

SysyParser::SysyParser(TokenStream* input)
    : SysyParser(input, antlr4::atn::ParserATNSimulatorOptions())
{
}

SysyParser::SysyParser(TokenStream* input, const antlr4::atn::ParserATNSimulatorOptions& options)
    : Parser(input)
{
    SysyParser::initialize();
    _interpreter = new atn::ParserATNSimulator(
        this,
        *sysyParserStaticData->atn,
        sysyParserStaticData->decisionToDFA,
        sysyParserStaticData->sharedContextCache,
        options
    );
}

SysyParser::~SysyParser()
{
    delete _interpreter;
}

const atn::ATN& SysyParser::getATN() const
{
    return *sysyParserStaticData->atn;
}

std::string SysyParser::getGrammarFileName() const
{
    return "Sysy.g4";
}

const std::vector<std::string>& SysyParser::getRuleNames() const
{
    return sysyParserStaticData->ruleNames;
}

const dfa::Vocabulary& SysyParser::getVocabulary() const
{
    return sysyParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView SysyParser::getSerializedATN() const
{
    return sysyParserStaticData->serializedATN;
}


//----------------- CompUnitContext
//------------------------------------------------------------------

SysyParser::CompUnitContext::CompUnitContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState)
{
}

tree::TerminalNode* SysyParser::CompUnitContext::EOF()
{
    return getToken(SysyParser::EOF, 0);
}

std::vector<SysyParser::CompUnitItemContext*> SysyParser::CompUnitContext::compUnitItem()
{
    return getRuleContexts<SysyParser::CompUnitItemContext>();
}

SysyParser::CompUnitItemContext* SysyParser::CompUnitContext::compUnitItem(size_t i)
{
    return getRuleContext<SysyParser::CompUnitItemContext>(i);
}


size_t SysyParser::CompUnitContext::getRuleIndex() const
{
    return SysyParser::RuleCompUnit;
}

void SysyParser::CompUnitContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<SysyListener*>(listener);
    if (parserListener != nullptr) parserListener->enterCompUnit(this);
}

void SysyParser::CompUnitContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<SysyListener*>(listener);
    if (parserListener != nullptr) parserListener->exitCompUnit(this);
}


std::any SysyParser::CompUnitContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<SysyVisitor*>(visitor))
        return parserVisitor->visitCompUnit(this);
    else
        return visitor->visitChildren(this);
}

SysyParser::CompUnitContext* SysyParser::compUnit()
{
    CompUnitContext* _localctx = _tracker.createInstance<CompUnitContext>(_ctx, getState());
    enterRule(_localctx, 0, SysyParser::RuleCompUnit);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(69);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while ((((_la & ~0x3fULL) == 0) && ((1ULL << _la) & 1920) != 0)) {
            setState(66);
            compUnitItem();
            setState(71);
            _errHandler->sync(this);
            _la = _input->LA(1);
        }
        setState(72);
        match(SysyParser::EOF);

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- CompUnitItemContext
//------------------------------------------------------------------

SysyParser::CompUnitItemContext::CompUnitItemContext(
    ParserRuleContext* parent, size_t invokingState
)
    : ParserRuleContext(parent, invokingState)
{
}

SysyParser::DeclContext* SysyParser::CompUnitItemContext::decl()
{
    return getRuleContext<SysyParser::DeclContext>(0);
}

SysyParser::FuncDefContext* SysyParser::CompUnitItemContext::funcDef()
{
    return getRuleContext<SysyParser::FuncDefContext>(0);
}


size_t SysyParser::CompUnitItemContext::getRuleIndex() const
{
    return SysyParser::RuleCompUnitItem;
}

void SysyParser::CompUnitItemContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<SysyListener*>(listener);
    if (parserListener != nullptr) parserListener->enterCompUnitItem(this);
}

void SysyParser::CompUnitItemContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<SysyListener*>(listener);
    if (parserListener != nullptr) parserListener->exitCompUnitItem(this);
}


std::any SysyParser::CompUnitItemContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<SysyVisitor*>(visitor))
        return parserVisitor->visitCompUnitItem(this);
    else
        return visitor->visitChildren(this);
}

SysyParser::CompUnitItemContext* SysyParser::compUnitItem()
{
    CompUnitItemContext* _localctx = _tracker.createInstance<CompUnitItemContext>(_ctx, getState());
    enterRule(_localctx, 2, SysyParser::RuleCompUnitItem);

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        setState(76);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
        case 1: {
            enterOuterAlt(_localctx, 1);
            setState(74);
            decl();
            break;
        }

        case 2: {
            enterOuterAlt(_localctx, 2);
            setState(75);
            funcDef();
            break;
        }

        default: break;
        }

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

SysyParser::DeclContext::DeclContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState)
{
}

SysyParser::ConstDeclContext* SysyParser::DeclContext::constDecl()
{
    return getRuleContext<SysyParser::ConstDeclContext>(0);
}

SysyParser::VarDeclContext* SysyParser::DeclContext::varDecl()
{
    return getRuleContext<SysyParser::VarDeclContext>(0);
}


size_t SysyParser::DeclContext::getRuleIndex() const
{
    return SysyParser::RuleDecl;
}

void SysyParser::DeclContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<SysyListener*>(listener);
    if (parserListener != nullptr) parserListener->enterDecl(this);
}

void SysyParser::DeclContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<SysyListener*>(listener);
    if (parserListener != nullptr) parserListener->exitDecl(this);
}


std::any SysyParser::DeclContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<SysyVisitor*>(visitor))
        return parserVisitor->visitDecl(this);
    else
        return visitor->visitChildren(this);
}

SysyParser::DeclContext* SysyParser::decl()
{
    DeclContext* _localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
    enterRule(_localctx, 4, SysyParser::RuleDecl);

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        setState(80);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
        case SysyParser::Const: {
            enterOuterAlt(_localctx, 1);
            setState(78);
            constDecl();
            break;
        }

        case SysyParser::Int:
        case SysyParser::Float: {
            enterOuterAlt(_localctx, 2);
            setState(79);
            varDecl();
            break;
        }

        default: throw NoViableAltException(this);
        }

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- ConstDeclContext
//------------------------------------------------------------------

SysyParser::ConstDeclContext::ConstDeclContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState)
{
}

tree::TerminalNode* SysyParser::ConstDeclContext::Const()
{
    return getToken(SysyParser::Const, 0);
}

SysyParser::BTypeContext* SysyParser::ConstDeclContext::bType()
{
    return getRuleContext<SysyParser::BTypeContext>(0);
}

std::vector<SysyParser::ConstDefContext*> SysyParser::ConstDeclContext::constDef()
{
    return getRuleContexts<SysyParser::ConstDefContext>();
}

SysyParser::ConstDefContext* SysyParser::ConstDeclContext::constDef(size_t i)
{
    return getRuleContext<SysyParser::ConstDefContext>(i);
}

tree::TerminalNode* SysyParser::ConstDeclContext::Semicolon()
{
    return getToken(SysyParser::Semicolon, 0);
}

std::vector<tree::TerminalNode*> SysyParser::ConstDeclContext::Comma()
{
    return getTokens(SysyParser::Comma);
}

tree::TerminalNode* SysyParser::ConstDeclContext::Comma(size_t i)
{
    return getToken(SysyParser::Comma, i);
}


size_t SysyParser::ConstDeclContext::getRuleIndex() const
{
    return SysyParser::RuleConstDecl;
}

void SysyParser::ConstDeclContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<SysyListener*>(listener);
    if (parserListener != nullptr) parserListener->enterConstDecl(this);
}

void SysyParser::ConstDeclContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<SysyListener*>(listener);
    if (parserListener != nullptr) parserListener->exitConstDecl(this);
}


std::any SysyParser::ConstDeclContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<SysyVisitor*>(visitor))
        return parserVisitor->visitConstDecl(this);
    else
        return visitor->visitChildren(this);
}

SysyParser::ConstDeclContext* SysyParser::constDecl()
{
    ConstDeclContext* _localctx = _tracker.createInstance<ConstDeclContext>(_ctx, getState());
    enterRule(_localctx, 6, SysyParser::RuleConstDecl);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(82);
        match(SysyParser::Const);
        setState(83);
        bType();
        setState(84);
        constDef();
        setState(89);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == SysyParser::Comma) {
            setState(85);
            match(SysyParser::Comma);
            setState(86);
            constDef();
            setState(91);
            _errHandler->sync(this);
            _la = _input->LA(1);
        }
        setState(92);
        match(SysyParser::Semicolon);

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- BTypeContext ------------------------------------------------------------------

SysyParser::BTypeContext::BTypeContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState)
{
}


size_t SysyParser::BTypeContext::getRuleIndex() const
{
    return SysyParser::RuleBType;
}

void SysyParser::BTypeContext::copyFrom(BTypeContext* ctx)
{
    ParserRuleContext::copyFrom(ctx);
}

//----------------- FloatContext ------------------------------------------------------------------

tree::TerminalNode* SysyParser::FloatContext::Float()
{
    return getToken(SysyParser::Float, 0);
}

SysyParser::FloatContext::FloatContext(BTypeContext* ctx)
{
    copyFrom(ctx);
}

void SysyParser::FloatContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<SysyListener*>(listener);
    if (parserListener != nullptr) parserListener->enterFloat(this);
}

void SysyParser::FloatContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<SysyListener*>(listener);
    if (parserListener != nullptr) parserListener->exitFloat(this);
}

std::any SysyParser::FloatContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<SysyVisitor*>(visitor))
        return parserVisitor->visitFloat(this);
    else
        return visitor->visitChildren(this);
}
//----------------- IntContext ------------------------------------------------------------------

tree::TerminalNode* SysyParser::IntContext::Int()
{
    return getToken(SysyParser::Int, 0);
}

SysyParser::IntContext::IntContext(BTypeContext* ctx)
{
    copyFrom(ctx);
}

void SysyParser::IntContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<SysyListener*>(listener);
    if (parserListener != nullptr) parserListener->enterInt(this);
}

void SysyParser::IntContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<SysyListener*>(listener);
    if (parserListener != nullptr) parserListener->exitInt(this);
}

std::any SysyParser::IntContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<SysyVisitor*>(visitor))
        return parserVisitor->visitInt(this);
    else
        return visitor->visitChildren(this);
}

SysyParser::BTypeContext* SysyParser::bType()
{
    BTypeContext* _localctx = _tracker.createInstance<BTypeContext>(_ctx, getState());
    enterRule(_localctx, 8, SysyParser::RuleBType);

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        setState(96);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
        case SysyParser::Int: {
            _localctx = _tracker.createInstance<SysyParser::IntContext>(_localctx);
            enterOuterAlt(_localctx, 1);
            setState(94);
            match(SysyParser::Int);
            break;
        }

        case SysyParser::Float: {
            _localctx = _tracker.createInstance<SysyParser::FloatContext>(_localctx);
            enterOuterAlt(_localctx, 2);
            setState(95);
            match(SysyParser::Float);
            break;
        }

        default: throw NoViableAltException(this);
        }

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- ConstDefContext
//------------------------------------------------------------------

SysyParser::ConstDefContext::ConstDefContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState)
{
}

tree::TerminalNode* SysyParser::ConstDefContext::Ident()
{
    return getToken(SysyParser::Ident, 0);
}

tree::TerminalNode* SysyParser::ConstDefContext::Assign()
{
    return getToken(SysyParser::Assign, 0);
}

SysyParser::InitValContext* SysyParser::ConstDefContext::initVal()
{
    return getRuleContext<SysyParser::InitValContext>(0);
}

std::vector<tree::TerminalNode*> SysyParser::ConstDefContext::Lbracket()
{
    return getTokens(SysyParser::Lbracket);
}

tree::TerminalNode* SysyParser::ConstDefContext::Lbracket(size_t i)
{
    return getToken(SysyParser::Lbracket, i);
}

std::vector<SysyParser::ExpContext*> SysyParser::ConstDefContext::exp()
{
    return getRuleContexts<SysyParser::ExpContext>();
}

SysyParser::ExpContext* SysyParser::ConstDefContext::exp(size_t i)
{
    return getRuleContext<SysyParser::ExpContext>(i);
}

std::vector<tree::TerminalNode*> SysyParser::ConstDefContext::Rbracket()
{
    return getTokens(SysyParser::Rbracket);
}

tree::TerminalNode* SysyParser::ConstDefContext::Rbracket(size_t i)
{
    return getToken(SysyParser::Rbracket, i);
}


size_t SysyParser::ConstDefContext::getRuleIndex() const
{
    return SysyParser::RuleConstDef;
}

void SysyParser::ConstDefContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<SysyListener*>(listener);
    if (parserListener != nullptr) parserListener->enterConstDef(this);
}

void SysyParser::ConstDefContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<SysyListener*>(listener);
    if (parserListener != nullptr) parserListener->exitConstDef(this);
}


std::any SysyParser::ConstDefContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<SysyVisitor*>(visitor))
        return parserVisitor->visitConstDef(this);
    else
        return visitor->visitChildren(this);
}

SysyParser::ConstDefContext* SysyParser::constDef()
{
    ConstDefContext* _localctx = _tracker.createInstance<ConstDefContext>(_ctx, getState());
    enterRule(_localctx, 10, SysyParser::RuleConstDef);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(98);
        match(SysyParser::Ident);
        setState(105);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == SysyParser::Lbracket) {
            setState(99);
            match(SysyParser::Lbracket);
            setState(100);
            exp();
            setState(101);
            match(SysyParser::Rbracket);
            setState(107);
            _errHandler->sync(this);
            _la = _input->LA(1);
        }
        setState(108);
        match(SysyParser::Assign);
        setState(109);
        initVal();

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- VarDeclContext
//------------------------------------------------------------------

SysyParser::VarDeclContext::VarDeclContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState)
{
}

SysyParser::BTypeContext* SysyParser::VarDeclContext::bType()
{
    return getRuleContext<SysyParser::BTypeContext>(0);
}

std::vector<SysyParser::VarDefContext*> SysyParser::VarDeclContext::varDef()
{
    return getRuleContexts<SysyParser::VarDefContext>();
}

SysyParser::VarDefContext* SysyParser::VarDeclContext::varDef(size_t i)
{
    return getRuleContext<SysyParser::VarDefContext>(i);
}

tree::TerminalNode* SysyParser::VarDeclContext::Semicolon()
{
    return getToken(SysyParser::Semicolon, 0);
}

std::vector<tree::TerminalNode*> SysyParser::VarDeclContext::Comma()
{
    return getTokens(SysyParser::Comma);
}

tree::TerminalNode* SysyParser::VarDeclContext::Comma(size_t i)
{
    return getToken(SysyParser::Comma, i);
}


size_t SysyParser::VarDeclContext::getRuleIndex() const
{
    return SysyParser::RuleVarDecl;
}

void SysyParser::VarDeclContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<SysyListener*>(listener);
    if (parserListener != nullptr) parserListener->enterVarDecl(this);
}

void SysyParser::VarDeclContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<SysyListener*>(listener);
    if (parserListener != nullptr) parserListener->exitVarDecl(this);
}


std::any SysyParser::VarDeclContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<SysyVisitor*>(visitor))
        return parserVisitor->visitVarDecl(this);
    else
        return visitor->visitChildren(this);
}

SysyParser::VarDeclContext* SysyParser::varDecl()
{
    VarDeclContext* _localctx = _tracker.createInstance<VarDeclContext>(_ctx, getState());
    enterRule(_localctx, 12, SysyParser::RuleVarDecl);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(111);
        bType();
        setState(112);
        varDef();
        setState(117);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == SysyParser::Comma) {
            setState(113);
            match(SysyParser::Comma);
            setState(114);
            varDef();
            setState(119);
            _errHandler->sync(this);
            _la = _input->LA(1);
        }
        setState(120);
        match(SysyParser::Semicolon);

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- VarDefContext ------------------------------------------------------------------

SysyParser::VarDefContext::VarDefContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState)
{
}

tree::TerminalNode* SysyParser::VarDefContext::Ident()
{
    return getToken(SysyParser::Ident, 0);
}

std::vector<tree::TerminalNode*> SysyParser::VarDefContext::Lbracket()
{
    return getTokens(SysyParser::Lbracket);
}

tree::TerminalNode* SysyParser::VarDefContext::Lbracket(size_t i)
{
    return getToken(SysyParser::Lbracket, i);
}

std::vector<SysyParser::ExpContext*> SysyParser::VarDefContext::exp()
{
    return getRuleContexts<SysyParser::ExpContext>();
}

SysyParser::ExpContext* SysyParser::VarDefContext::exp(size_t i)
{
    return getRuleContext<SysyParser::ExpContext>(i);
}

std::vector<tree::TerminalNode*> SysyParser::VarDefContext::Rbracket()
{
    return getTokens(SysyParser::Rbracket);
}

tree::TerminalNode* SysyParser::VarDefContext::Rbracket(size_t i)
{
    return getToken(SysyParser::Rbracket, i);
}

tree::TerminalNode* SysyParser::VarDefContext::Assign()
{
    return getToken(SysyParser::Assign, 0);
}

SysyParser::InitValContext* SysyParser::VarDefContext::initVal()
{
    return getRuleContext<SysyParser::InitValContext>(0);
}


size_t SysyParser::VarDefContext::getRuleIndex() const
{
    return SysyParser::RuleVarDef;
}

void SysyParser::VarDefContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<SysyListener*>(listener);
    if (parserListener != nullptr) parserListener->enterVarDef(this);
}

void SysyParser::VarDefContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<SysyListener*>(listener);
    if (parserListener != nullptr) parserListener->exitVarDef(this);
}


std::any SysyParser::VarDefContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<SysyVisitor*>(visitor))
        return parserVisitor->visitVarDef(this);
    else
        return visitor->visitChildren(this);
}

SysyParser::VarDefContext* SysyParser::varDef()
{
    VarDefContext* _localctx = _tracker.createInstance<VarDefContext>(_ctx, getState());
    enterRule(_localctx, 14, SysyParser::RuleVarDef);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(122);
        match(SysyParser::Ident);
        setState(129);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == SysyParser::Lbracket) {
            setState(123);
            match(SysyParser::Lbracket);
            setState(124);
            exp();
            setState(125);
            match(SysyParser::Rbracket);
            setState(131);
            _errHandler->sync(this);
            _la = _input->LA(1);
        }
        setState(134);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == SysyParser::Assign) {
            setState(132);
            match(SysyParser::Assign);
            setState(133);
            initVal();
        }

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- InitValContext
//------------------------------------------------------------------

SysyParser::InitValContext::InitValContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState)
{
}


size_t SysyParser::InitValContext::getRuleIndex() const
{
    return SysyParser::RuleInitVal;
}
